--- a/index.html
+++ b/index.html
@@ -7,11 +7,27 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Clipboard landing page</title>
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.css" integrity="sha512-4wfcoXlib1Aq0mUtsLLM74SZtmB73VHTafZAvxIp/Wk9u1PpIsrfmTvK0+yKetghCL8SHlZbMyEcV8Z21v42UQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 
 </head>
 <body>
+  <header>
+    <div class="logo">
+      <img src="./images/logo.svg" alt="header-logo">
+    </div>
+  </header>
+  <div class="heading">
+    <h1>A history of everything you copy</h1>
+    <p>Clipboard allows you to track and organize everything you 
+    copy. Instantly access your clipboard on all your devices.</p>
+  </div>
+  <div class="btn">
+    <a href="/" class="btn-1">Download for iOS</a>
+    <a href="/" class="btn-2">Download for Mac</a>
+  </div>
 
   
   
