--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         </div>
         <div class="col">
           <p><a href="">Install Guide</a></p>
+          <p>para</p>
         </div>
       </div>
       <div class="footer-right">
